Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriTextRetundefined.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        text two = "green"
        Yoda<Text, text, undefined> yoda
        undefined ret = yoda:useForce(one, two)
        output "passed"
     end
end
