Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjObjTextRetundefinedFail.quorum
class Main
    action Main
        Text one
        one:SetValue("green")
        Text two
        two:SetValue("green")
        Yoda<Text, Text, undefined> yoda
        boolean wrongRet = yoda(one, two)
     end
end
